# zsh

./: .gitignore  .gitmodules  .gitsubtrees  .zcompdump  CHANGELOG.md  LS_COLORS  Makefile  Makefile.am  Makefile.in  README.md  aliases.zsh  auto-fu  bindings.zsh  bkg-zsh-config.ebuild  bkg-zsh-config.ebuild.in  compl.zsh  configure  configure.ac  exports.zsh  functions.zsh  hashed-dirs.zsh  hooks.zsh  init_path.zsh  kalkinprompt.zsh  modules.zsh  options.zsh  param.zsh  profile-d  prompt.zsh  qubes-builder.zsh  terminfo-xterm256-colors.src  zaw-zshrc.zsh  zshaliases  zshbindings  zshcompl  zshenv.in  zshexports  zshfunctions  zshhooks  zshlogout  (+5 more)
.be/f3815ac9-e647-4544-b833-bc705b8de9c6/bugs/3636e31d-2f77-472d-96fa-259504f21fe6/: values
.be/f3815ac9-e647-4544-b833-bc705b8de9c6/bugs/9ee85928-824c-4d5d-afde-4aa2ade3dbb4/: values
completions/: .gitsubtrees  _nimble  _qubes-hcl-report  _qubes-vms  _qvm-backup  _qvm-clone  _qvm-create  _qvm-ls  _qvm-prefs  _qvm-rename  _qvm-run  _qvm-shutdown
fast-syntax-higlighting/: .gitignore  Makefile.am  Makefile.builder  Makefile.in  configure  configure.ac  fast-syntax-highlighting.ebuild  fast-syntax-highlighting.ebuild.in  fast-syntax-highlighting.spec  fast-syntax-highlighting.spec.in
fast-syntax-higlighting/:chroma/: -git.ch
fast-syntax-higlighting/chroma/: -git.ch
fast-syntax-higlighting/m4/: BKG_ENABLE_XDG.m4  BKG_PACKAGE_GENTOO.m4  BKG_PACKAGE_INFO.m4  BKG_RPM.m4
functions/: git-escape-magic  run-with-sudo
m4/: BKG_ENABLE_XDG.m4  BKG_PACKAGE_GENTOO.m4  BKG_PACKAGE_INFO.m4  enable-xdg.m4
man/: zsh-bkg.1
units/: be.zsh  browser.zsh  color-aliases.zsh  colored-manpages.zsh  colorful-pager.zsh  editor-vi.zsh  fast-syntax-highlighting.plugin.zsh.in  git-absorb.zsh  git-aliases.zsh  git-issues.zsh  git.zsh  global-alias.zsh  history.zsh  kalkinprompt.zsh  ls-colors.zsh  ls-setup.zsh  ls-setup.zsh.in  monorepo.zsh  qubes-builder.zsh  qubes.zsh  sanitize-dir-hashes.zsh  scp-fix.zsh  suffix-alias.zsh  xdg-dirs.zsh  you-should-use.plugin.zsh  you-should-use.plugin.zsh.in  zaw.plugins.zsh.in  zsh-autosuggestions.plugin.zsh.in
you-should-use/: .gitignore  .travis.yml  Makefile.am  Makefile.builder  Makefile.in  configure  configure.ac  you-should-use.ebuild  you-should-use.plugin.zsh  you-should-use.spec  you-should-use.spec.in
you-should-use/m4/: BKG_RPM.m4
zaw/: .gitignore  Makefile.am  Makefile.builder  Makefile.in  configure  configure.ac  zaw.ebuild  zaw.spec  zaw.spec.in
zaw/m4/: BKG_ENABLE_XDG.m4
zsh/: zshaliases
zsh-autosuggestions/: .gitignore  Makefile.am  Makefile.builder  Makefile.in  configure  configure.ac  zsh-autosuggestions.ebuild  zsh-autosuggestions.ebuild.in  zsh-autosuggestions.spec  zsh-autosuggestions.spec.in
zsh-autosuggestions/m4/: BKG_ENABLE_XDG.m4  BKG_RPM.m4
