AC_INIT(you-should-use, 1.6.1)
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([m4])

BKG_ENABLE_XDG
BKG_PACKAGE_INFO(["ZSH plugin that reminds you to use existing aliases for commands you just typed "])
BKG_RPM
BKG_PACKAGE_GENTOO(["app-shells"])

AC_CONFIG_FILES([Makefile you-should-use.spec])
AC_OUTPUT

