zaw_dir = $(pkgdatadir)
functions_dir = $(zaw_dir)/functions
sources_dir = $(zaw_dir)/sources
zaw__DATA = zaw-launcher.zsh  zaw.plugin.zsh  zaw.zsh
functions__DATA = functions/fill-vars-or-accept  functions/filter-select
sources__DATA = sources/aliases.zsh sources/applications.zsh \
				sources/bookmark.zsh sources/cdr.zsh sources/command-output.zsh \
				sources/commands.zsh sources/fasd.zsh sources/functions.zsh \
				sources/git-branches.zsh sources/git-files.zsh \
				sources/git-log.zsh sources/git-recent-branches.zsh \
				sources/git-reflog.zsh sources/git-status.zsh \
				sources/history.zsh sources/locate.zsh sources/open-file.zsh \
				sources/perldoc.zsh sources/process.zsh sources/programs.zsh \
				sources/screens.zsh sources/searcher.zsh sources/ssh-hosts.zsh \
				sources/tmux.zsh sources/widgets.zsh
dist_doc_DATA = LICENSE README.rst
EXTRA_DIST = functions sources
